api/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cartiflette-api
spec:
  selector:
    app: cartiflette-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
